--- a/style.css
+++ b/style.css
@@ -155,6 +155,7 @@ html {
     height: 550px;
     background-image: linear-gradient(to right,rgba(0,0,0,.4) 100% , rgba(0,0,0,.3) 0%) , url(./imgs/banner.jpg);
     background-size: cover;
+    background-position: bottom;
     display: flex;
     align-items: center;
     justify-content: center;
